# adventofcode2024

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
app/: __init__.py  config.py  instructions.md
app/routes/: main.py
app/services/: llm_handler.py  solution_runner.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: base.html  index.html
app/templates/components/: result.html
day_1/: pyproject.toml
day_1/prompts/: prompts.md
day_1/solution/: output_part1.txt  output_part2.txt  solution.py  solution2.py
day_1/spec/: instructions.md  instructions2.md  spec.md  spec2.md
day_2/solution/: solution.py  solution2.py
day_2/spec/: spec.md  spec2.md
day_3/solution/: solution.py  solution2.py
day_3/spec/: spec.md  spec2.md
